# Kaleidoscope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  .vale.ini  .yamlfmt  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.Rmd  README.md  REUSE.toml  about.toml  app.R  bacon.toml  deny.toml  footer.html  global.R  header.html  ks_custom_functions.js  nextest.toml  path_lookup.R  renovate.json  server.R  testing_stuff.R  ui.R
.reuse/: dep5
R/: DB_connect.R  addingds.R  geneshot_api.R  getEnrichrLink.R  renaming_ds.R  variables_setup.R
backend/: .gitignore  Cargo.toml  README.md
backend/api/: spec.yaml
backend/src/kaleidoscope/: main.rs
backend/src/kaleidoscope_lib/: lib.rs
data/: .gitignore  BarresBrainSeqMouse.rds  GO_Biological_Process_2018.txt  GTExColoredGrouped.rds  GTExSampleAtrrHM.rds  GWAS_asso.rds  HumanBarres.rds  SCZ _Datasets_Info.csv  SCZ_Datasets_Info.csv  clusterHeatmapGrouping.rds
frontend/: package-lock.json  package.json
meta/: licenses.hbs
modules/: brainatlas_avg_all_genes.RDS  brainatlas_mod.R  braincloud_mod.R  brainrnaseq_mod.R  brainseq_avg_human_prop_fixed.RDS  brainseq_avg_mice_prop_fixed.RDS  download_mod.R  enrichr_mod.R  geneInputUI_mod.R  gtex_mod.R  gwascatalog_mod.R  ilincs_mod.R  info_mod.R  lookup_mod.R  pharos_mod.R  process_input.R  report_mod.R  string_mod.R  tests.R
renv/: activate.R
scripts/: brainseq_script.R  gene_symbols_alias.R  genesets_dbs.R  go_pathway_figure.R  gsea_tests.R  rainclooud_test.Rmd  string_output.RDS  (+3 more)
(+38 files in other folders)
